@@ -44,6 +44,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Added prioritized list of xsltproc tools to docbook. The order will now be as
       follows: xsltproc, saxon, saxon-xslt, xalan  (with first being highest priority, first
       tool found is used)
+    - Fixed MSVSProject example code (http://scons.tigris.org/issues/show_bug.cgi?id=2979)
 
   From Daniel Moody:
     - Fixed msvs.py for Visual Studio generated projects which were
